--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -491,14 +491,14 @@ Default Key Bindings</b></caption>
 </tr>
 <tr>
 <TD ALIGN="left" height="32" width="81">Question Mark (?)</TD>
-<TD ALIGN="left" height="32" width="67"></TD>
-<TD ALIGN="left" height="32" width="80"></TD>
-<TD ALIGN="left" height="32" width="76"></TD>
-<TD ALIGN="left" height="32" width="76"></TD>
-<TD ALIGN="left" height="32" width="76"></TD>
+<TD ALIGN="left" height="32" width="67">&nbsp;</TD>
+<TD ALIGN="left" height="32" width="80">&nbsp;</TD>
+<TD ALIGN="left" height="32" width="76">&nbsp;</TD>
+<TD ALIGN="left" height="32" width="76">&nbsp;</TD>
+<TD ALIGN="left" height="32" width="76">&nbsp;</TD>
 <TD ALIGN="left" height="32" width="83">(JDT editor) Parameter Hints&nbsp;(Simplified
   Chinese)</TD>
-<TD ALIGN="left" height="32" width="92"></TD>
+<TD ALIGN="left" height="32" width="92">&nbsp;</TD>
 </tr>
 <TR VALIGN="bottom">
 <TD ALIGN="left">Left Arrow</TD>
